--- a/SkyrimSpells/.classpath
+++ b/SkyrimSpells/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="C:/spigot-api-1.7.5-R0.1-20140403.201412-29.jar"/>
-	<classpathentry kind="lib" path="C:/spigot-1.7.5-R0.1-20140403.201507-29.jar"/>
+	<classpathentry kind="lib" path="C:/spigot-api-1.7.10-R0.1-20140801.084611-48.jar"/>
+	<classpathentry kind="lib" path="C:/spigot-1.7.10-R0.1-SNAPSHOT.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
